clang/test/BSC/Negative/Trait/r1/definition_7/definition_7.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int a(This *this);
};

int int::a(int *this) {
  return 0;
};

_Impl _Trait F for int;

int main() {
  int a = 1;
  _Trait F f = &a; // expected-error {{only _Trait pointer type is allowed to be declared}}
  return 0;
}
